chore(gradle): remove reforged

--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -40,7 +40,7 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
     compileOnly 'org.spongepowered:spongeforge:1.12.2-2838-7.1.8:dev'
-    compileOnly ('com.pixelmonmod.pixelmon:Pixelmon-1.12.2-8.2.0-server:1.0')
+
     compileOnly project(':forge')
     compileOnly project(':api')
 
@@ -53,7 +53,7 @@ dependencies {
 
 shadowJar {
     configurations = [project.configurations.shadow]
-    archiveName = rootProject.name + '-Sponge.jar'
+    archiveName = rootProject.name + '-Sponge-Bridge.jar'
 
     relocate('org.spongepowered.configurate', 'com.envyful.economies.forge.shade.configurate')
     relocate('org.yaml.snakeyaml', 'com.envyful.economies.forge.shade.snakeyaml')
