feat(spigot): begin economy registry

--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -39,6 +39,7 @@ repositories {
 dependencies {
     minecraft 'net.minecraftforge:forge:1.12.2-14.23.5.2854'
     compileOnly 'org.spigotmc:spigot-api:1.17-R0.1-SNAPSHOT'
+    compileOnly "com.github.MilkBowl:VaultAPI:1.7"
 
     compileOnly project(':forge')
     compileOnly project(':api')
