--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ subprojects {
     apply plugin: 'java'
 
     group = 'com.envyful.economies'
-    version = '0.0.1'
+    version = '0.1.1'
 
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -32,5 +32,15 @@ subprojects {
         	name = 'sponge'
         	url = 'https://repo.spongepowered.org/maven'
     	}
+    }
+
+    task versionedRelease(type: Copy) {
+        group "build"
+        from('./build/libs/' + rootProject.name + '-Forge.jar')
+        into('../release/')
+        include '*.jar'
+        rename { String filename ->
+            filename.replace(".jar", "-${project.version}.jar")
+        }
     }
 }
