--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 
 shadowJar {
     configurations = [project.configurations.shadow]
-    archiveName = rootProject.name + '-Sponge-Bridge.jar'
+    archiveName = rootProject.name + '-Spigot-Bridge.jar'
 
     relocate('org.spongepowered.configurate', 'com.envyful.economies.forge.shade.configurate')
     relocate('org.yaml.snakeyaml', 'com.envyful.economies.forge.shade.snakeyaml')
@@ -75,4 +75,15 @@ reobf {
 }
 
 jar.finalizedBy('reobfJar')
-build.finalizedBy('versionedRelease')
+build.finalizedBy('versionedReleaseOverride')
+
+
+task versionedReleaseOverride(type: Copy) {
+    group "build"
+    from('./build/libs/' + rootProject.name + '-Spigot-Bridge.jar')
+    into('../release/')
+    include '*.jar'
+    rename { String filename ->
+        filename.replace(".jar", "-${project.version}.jar")
+    }
+}
