--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -74,3 +74,15 @@ reobf {
 }
 
 jar.finalizedBy('reobfJar')
+build.finalizedBy('versionedReleaseOverride')
+
+
+task versionedReleaseOverride(type: Copy) {
+    group "build"
+    from('./build/libs/' + rootProject.name + '-Spigot-Bridge.jar')
+    into('../release/')
+    include '*.jar'
+    rename { String filename ->
+        filename.replace(".jar", "-${project.version}.jar")
+    }
+}
