--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -79,7 +79,7 @@ build.finalizedBy('versionedReleaseOverride')
 
 task versionedReleaseOverride(type: Copy) {
     group "build"
-    from('./build/libs/' + rootProject.name + '-Spigot-Bridge.jar')
+    from('./build/libs/' + rootProject.name + '-Sponge-Bridge.jar')
     into('../release/')
     include '*.jar'
     rename { String filename ->
