--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -40,8 +40,8 @@ dependencies {
 
     shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    shadow group: 'com.github.Pixelmon-Development.API', name: 'commons', version: '1.1.4'
-    shadow group: 'com.github.Pixelmon-Development.API', name: 'forge', version: '1.1.4'
+    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'commons', version: '1.2.8'
+    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'forge', version: '1.2.8'
 
     shadow project(':api')
 }
