--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -46,9 +46,9 @@ dependencies {
 
     compileOnly group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    compileOnly group: 'com.github.Pixelmon-Development.API', name: 'commons', version: '0.4.5'
-    compileOnly group: 'com.github.Pixelmon-Development.API', name: 'forge', version: '0.4.5'
-    compileOnly group: 'com.github.Pixelmon-Development.API', name: 'reforged', version: '0.4.5'
+    compileOnly group: 'com.github.Daniel-Forge-Development.API', name: 'commons', version: '1.5.1'
+    compileOnly group: 'com.github.Daniel-Forge-Development.API', name: 'forge', version: '1.5.1'
+    compileOnly group: 'com.github.Daniel-Forge-Development.API', name: 'reforged', version: '1.5.1'
 }
 
 shadowJar {
