--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ subprojects {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
+    ext {
+        forgeVersion = "none"
+    }
+
     tasks.withType(JavaCompile) {
         options.encoding = 'UTF-8'
     }
@@ -40,7 +44,7 @@ subprojects {
         into('../release/')
         include '*.jar'
         rename { String filename ->
-            filename.replace(".jar", "-${project.version}.jar")
+            filename.replace(".jar", "-${project.version}-${forgeVersion}.jar")
         }
     }
 }
