--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -42,8 +42,8 @@ dependencies {
 
     shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'commons', version: '1.5.1'
-    shadow group: 'com.github.Daniel-Forge-Development.API', name: 'forge', version: '1.5.1'
+    shadow group: 'com.github.EnvyWare.API', name: 'commons', version: '2.2.8'
+    shadow group: 'com.github.EnvyWare.API', name: 'forge', version: '2.2.8'
 
     shadow project(':api')
 }
