--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -46,8 +46,8 @@ dependencies {
 
     compileOnly group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    compileOnly group: 'com.github.Daniel-Forge-Development.API', name: 'commons', version: '1.5.1'
-    compileOnly group: 'com.github.Daniel-Forge-Development.API', name: 'forge', version: '1.5.1'
+    compileOnly group: 'com.github.EnvyWare.API', name: 'commons', version: '2.2.8'
+    compileOnly group: 'com.github.EnvyWare.API', name: 'forge', version: '2.2.8'
 }
 
 shadowJar {
