--- a/forge16/build.gradle
+++ b/forge16/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
     }
 }
 
@@ -38,7 +38,7 @@ repositories {
 }
 
 dependencies {
-    minecraft 'net.minecraftforge:forge:1.16.5-36.2.22'
+    minecraft 'net.minecraftforge:forge:1.16.5-36.2.34'
 
     shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
@@ -66,9 +66,7 @@ shadowJar {
 }
 
 reobf {
-    shadowJar {
-        classpath = sourceSets.main.compileClasspath
-    }
+    shadowJar {}
 }
 
 jar.finalizedBy('reobfJar')
