--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -10,7 +10,7 @@ buildscript {
         }
     }
     dependencies {
-        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '4.+', changing: true
+        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
         classpath 'gradle.plugin.org.spongepowered:spongegradle:0.8.1'
     }
 }
@@ -69,9 +69,7 @@ shadowJar {
 }
 
 reobf {
-    shadowJar {
-        classpath = sourceSets.main.compileClasspath
-    }
+    shadowJar {}
 }
 
 jar.finalizedBy('reobfJar')
