chore(gradle): update for forge16

--- a/api/build.gradle
+++ b/api/build.gradle
@@ -8,9 +8,9 @@ repositories {
 }
 
 dependencies {
-    shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
+//    shadow group: 'org.spongepowered', name: 'configurate-yaml', version: '4.0.0'
 
-    compileOnly group: 'com.github.Pixelmon-Development.API', name: 'commons', version: '0.4.7'
+    compileOnly group: 'com.github.EnvyWare.API', name: 'commons', version: '2.4.3'
 }
 
 shadowJar {
