--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
         maven {
             name = 'forge'
-            url = 'https://files.minecraftforge.net/maven'
+            url = 'https://maven.minecraftforge.net'
         }
         maven {
             url = 'https://plugins.gradle.org/m2/'
@@ -60,7 +60,6 @@ shadowJar {
     relocate('org.slf4j', 'com.envyful.economies.forge.shade.slf4j')
     relocate('com.envyful.api', 'com.envyful.economies.forge.shade.envy.api')
     relocate('org.bstats', 'com.envyful.economies.forge.shade.bstats')
-
 
     exclude "**/module-info.class"
 }
