--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'ForgeEconomies'
 include 'api'
 include 'forge'
-include 'sponge'
+//include 'sponge'
 include 'spigot'
 include 'forge16'
 
