--- a/spigot/build.gradle
+++ b/spigot/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         jcenter()
         maven {
             name = 'forge'
-            url = 'https://files.minecraftforge.net/maven'
+            url = 'https://maven.minecraftforge.net'
         }
         maven {
             url = 'https://plugins.gradle.org/m2/'
@@ -11,12 +11,10 @@ buildscript {
     }
     dependencies {
         classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '5.+', changing: true
-        classpath 'gradle.plugin.org.spongepowered:spongegradle:0.8.1'
     }
 }
 
 apply plugin: 'net.minecraftforge.gradle'
-apply plugin: 'org.spongepowered.plugin'
 
 minecraft {
     mappings channel: 'snapshot', version: '20180814-1.12'
@@ -25,11 +23,6 @@ minecraft {
 sourceSets.main.resources { srcDir 'src/generated/resources' }
 
 repositories {
-    maven {
-        name = 'spongepowered-repo'
-        url = 'https://repo.spongepowered.org/maven'
-    }
-
     maven { url 'https://jitpack.io' }
 
     flatDir {
