--- a/sponge/build.gradle
+++ b/sponge/build.gradle
@@ -1,9 +1,8 @@
 buildscript {
     repositories {
-        jcenter()
         maven {
             name = 'forge'
-            url = 'https://files.minecraftforge.net/maven'
+            url = 'https://maven.minecraftforge.net'
         }
         maven {
             url = 'https://plugins.gradle.org/m2/'
@@ -63,7 +62,6 @@ shadowJar {
     relocate('com.envyful.api', 'com.envyful.economies.forge.shade.envy.api')
     relocate('org.bstats', 'com.envyful.economies.forge.shade.bstats')
 
-
     exclude "**/module-info.class"
 }
 
@@ -73,7 +71,6 @@ reobf {
 
 jar.finalizedBy('reobfJar')
 build.finalizedBy('versionedReleaseOverride')
-
 
 task versionedReleaseOverride(type: Copy) {
     group "build"
