--- a/forge16/build.gradle
+++ b/forge16/build.gradle
@@ -44,7 +44,7 @@ dependencies {
         transitive = false
     }
 
-    implementation project(':api')
+    shadow project(':api')
 }
 
 shadowJar {
